Added first level support for Tools menu and updated config for Asus F70SL

--- a/storage/kextpacks/voodooHDA3/VoodooHDA2-7-4.kext/Contents/Info.plist
+++ b/storage/kextpacks/voodooHDA3/VoodooHDA2-7-4.kext/Contents/Info.plist
@@ -47,7 +47,7 @@
 			<key>IOMatchCategory</key>
 			<string>VoodooHDADevice</string>
 			<key>IOPCIPrimaryMatch</key>
-			<string>0x11D41984 0x1e208086 0x27d88086 0x284b8086 0x1c208086 0x293e8086</string>
+			<string>0x11D41984 0x1e208086 0x27d88086 0x284b8086 0x1c208086 0x293e8086 0x75021039</string>
 			<key>IOProviderClass</key>
 			<string>IOPCIDevice</string>
 			<key>IOUserClientClass</key>
