Added DSDT for Asus F70sl and changed to using kernelcache

--- a/Models/Asus_F70_sl/common/org.chameleon.Boot.plist
+++ b/Models/Asus_F70_sl/common/org.chameleon.Boot.plist
@@ -17,14 +17,14 @@
 	<key>Kernel</key>
 	<string>mach_kernel</string>
 	<key>Kernel Flags</key>
-	<string>-v -f npci=0x2000</string>
-	<key>Quiet Boot</key>
-	<string>No</string>
+	<string>-v npci=0x2000</string>
 	<key>SystemType</key>
 	<string>2</string>
 	<key>Timeout</key>
 	<string>10</string>
 	<key>USBBusFix</key>
+	<string>Yes</string>
+	<key>UseKernelCache</key>
 	<string>Yes</string>
 </dict>
 </plist>
