--- a/bin/lws/web.xml
+++ b/bin/lws/web.xml
@@ -117,7 +117,7 @@
     </init-param>
     <init-param>
       <param-name>welcomeServlets</param-name>
-      <param-value>false</param-value>
+      <param-value>true</param-value>
     </init-param>
     <init-param>
       <param-name>redirectWelcome</param-name>
