Removing logging in Abyss

--- a/bin/abyss.conf
+++ b/bin/abyss.conf
@@ -16,15 +16,21 @@
 			</keepalive>
 			<opsys>
 				<pidfile>
-					log/abyssws.pid
+					
 				</pidfile>
 				<sysuser>
-					lsb
+					admin
 				</sysuser>
 				<sysgroup>
-					staff
+					sys
 				</sysgroup>
 			</opsys>
+			<maxrequestlinelength>
+				4096
+			</maxrequestlinelength>
+			<maxrequestheaderslength>
+				0
+			</maxrequestheaderslength>
 		</parameters>
 		<host>
 			<names/>
@@ -52,7 +58,6 @@
 						yes
 					</useshebang>
 					<errorfile>
-						log/cgi.log
 					</errorfile>
 				</cgi>
 				<isapi>
@@ -60,7 +65,6 @@
 						dll
 					</ext>
 					<errorfile>
-						log/isapi.log
 					</errorfile>
 					<debuglevel>
 						0
@@ -68,7 +72,6 @@
 				</isapi>
 				<fastcgi>
 					<errorfile>
-						log/fastcgi.log
 					</errorfile>
 					<timeout>
 						240
@@ -144,7 +147,7 @@
 			</ssi>
 			<log>
 				<file>
-					log/access.log
+					
 				</file>
 				<denied/>
 				<format>
@@ -948,6 +951,11 @@
 				</ext>
 			</mime>
 		</mimes>
+		<rpaf>
+			<enabled>
+				no
+			</enabled>
+		</rpaf>
 	</server>
 	<version>
 		2.8.0.1
